--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <li><a href='odds/home'>今日比赛列表</a></li>
         <li><a href='odds/history/?passed=1'>历史比赛列表</a></li>
         <li><a href='odds/next/?page_number=1'>未来比赛列表</a></li>
-        <li><a href='statistics'>查看比赛统计</a></li>
+        <li><a href='statistics/home'>查看比赛统计</a></li>
     </ul>
 </body>
 </html>
